crates/warp_i18n/tests/compile_fail/t_macro_rejects_unknown_key.rs
// compile_fail: t!() requires key to exist in en bundle; unknown key must fail at compile time.
use warp_i18n::t;

fn main() {
    let _label = t!("this-key-does-not-exist-in-any-bundle-xyz"); //~ ERROR
}
